--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-   "name": "HW4",
-   "description": "Restaurant database",
+   "name": "Final Project",
+   "description": "FaceBook",
    "version": "0.0.1",
    "scripts": {
      "start": "node app.js"
